--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "start": "nodemon server/index.js",
     "build": "webpack --mode production",
+    "dev": "webpack --mode development && node server/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
